<resources>
    <string name="app_name">智联生活</string>
    <string name="main_bottom_bar1">首页</string>
    <string name="main_bottom_bar2">分类</string>
    <string name="main_bottom_bar3">金融</string>
    <string name="main_bottom_bar4">购物车</string>
    <string name="main_bottom_bar5">我的</string>
    <string name="permission1">权限设置</string>
    <string name="permission2">我们需要获取您的位置权限来为您提供周边的商品信息.</string>
    <string name="permission3">继续</string>
    <string name="main1">更多</string>

    <string name="house1">户&#8194;&#8194;&#8194;&#8194;型：</string>
    <string name="house2">楼&#8194;&#8194;&#8194;&#8194;层：</string>
    <string name="house3">租&#8194;&#8194;&#8194;&#8194;金：</string>
    <string name="house4">售&#8194;&#8194;&#8194;&#8194;价：</string>
    <string name="house5">年&#8194;&#8194;&#8194;&#8194;代：</string>
    <string name="house6">来&#8194;&#8194;&#8194;&#8194;源：</string>
    <string name="house7">姓&#8194;&#8194;&#8194;&#8194;名：</string>
    <string name="house8">停&#8194;车&#8194;位：</string>
    <string name="house9">容&#8194;积&#8194;率：</string>
    <string name="house10">绿&#8194;化&#8194;率：</string>
    <string name="house11">开&#8194;发&#8194;商：</string>
    <string name="house12">得&#8194;房&#8194;率</string>
    <string name="house13">总&#8194;&#8194;&#8194;&#8194;价</string>

    <string name="baobei">姓&#8194;&#8194;名：</string>
    <string name="baobei1">备&#8194;&#8194;注：</string>
    <string name="house">温馨提示：仅湖州地区内房屋可申请本装修贷款金融方案.其他地区当前暂不支持！</string>
</resources>
