<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">
    <item
        android:id="@+id/i_home"
        android:checked="true"
        android:icon="@drawable/ic_home_unselected"
        android:title="@string/main_bottom_bar1" />

    <item
        android:id="@+id/i_class"
        android:icon="@drawable/ic_classify_unselected"
        android:title="@string/main_bottom_bar2" />

    <item
        android:id="@+id/i_finance"
        android:icon="@drawable/ic_finance_unselected"
        android:title="@string/main_bottom_bar3" />
    <item
        android:id="@+id/i_shoppingCart"
        android:icon="@drawable/ic_shopping_unselected"
        android:title="@string/main_bottom_bar4" />
    <item
        android:id="@+id/i_my"
        android:icon="@drawable/ic_me_unselected"
        android:title="@string/main_bottom_bar5" />
</menu>